back to max size